fixed about.html spacing

--- a/css/about.css
+++ b/css/about.css
@@ -64,14 +64,21 @@ h1, h2, h3, h4, h5 {
 
 .header{
     display:flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
     align-items:center;
     align-items:baseline;
-    padding: 1.25em 0;
-    margin: 4em;
+    padding: 1.25em 7em;
+    margin: 6%;
     margin-top: 2em;
     margin-bottom: 2em;
     font-size: .75em;
     font-weight: bold;
+}
+.header nav{
+    padding: 0 12em;
+    font-size: 1.5em;
+
 }
 .button{
     padding: 3.5em;
@@ -80,13 +87,17 @@ h1, h2, h3, h4, h5 {
 }
 #header-image{
     padding: 1.25em;
-    margin: 2em;
+    margin-left: 9%;
+}
+#image{
+    width: 90%;
 }
 .container-about-page{
     display: flex;
     flex-flow: wrap;
-    justify-content: space-evenly;
-    border: 2px solid hotpink;
+    justify-content: center;
+    width: 80%;
+    margin-left: 10%;
 }
 .flex{
     display:flex;
@@ -96,8 +107,8 @@ h1, h2, h3, h4, h5 {
 }
 #about-page{
     border-bottom: 1px dashed black;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 3em;
+    margin-right: 3em;
     padding: 2em;
     padding-top: 0;
 
@@ -106,30 +117,50 @@ h2{
     padding-bottom: 1em;
 }
 #strategy{
-    width: 20%;
+    width:33%;
     margin: 3em;
-    border: 2px solid black;
+    padding: 1em;
+    border-bottom: 1px dashed black;
 }
 #how-work{
-    width: 20%;
+    width: 33%;
     margin: 3em;
-    border: 2px solid black;
+    padding: 1em;
+    border-bottom: 1px dashed black;
 }
 #places-work{
-    width: 20%;
+    width: 33%;
     margin: 3em;
-    border: 2px solid black;
+    padding: 1em;
+    border-bottom: 1px dashed black;
 }
 #collab{
-    width: 20%;
+    width: 33%;
     margin: 3em;
-    border: 2px solid black;
+    padding: 1em;
+    border-bottom: 1px dashed black;
 }
 button{
     background: white;
     border-style: none;
-    border: 1px solid black;
+    border: 2px solid black;
     padding: .5em;
+    margin: 1em 0;
     border-radius: 10px;
     width: 8em;
+}
+#sub-footer{
+width: 90%;
+}
+footer{
+    background:black;
+    color:white;
+    width: 100%;
+    text-align: left;
+    padding: 3em;
+}
+#footer nav a{
+    text-decoration: none;
+    color: white;
+    padding: 0 3em;
 }
